--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -6788,6 +6788,14 @@ a.bg-dark:focus, a.bg-dark:hover {
 	font-size:10px !important;
 }
 
+.fs-20 {
+	font-size:20px !important;
+}
+
+.fs-30 {
+	font-size:30px !important;
+}
+
 .fs-40 {
 	font-size:40px !important;
 }
