--- a/css/clientes/bootstrapDisensa.css
+++ b/css/clientes/bootstrapDisensa.css
@@ -6273,4 +6273,10 @@ a.text-dark:hover, a.text-dark:focus {
   width: 15% !important; 
   }
 
+   .fs30 {
+	font-size: 30px;
+  }
+   .fs60 {
+	font-size: 60px;
+  }
 /* @end */
