--- a/css/clientes/bootstrapDisensa.css
+++ b/css/clientes/bootstrapDisensa.css
@@ -6279,4 +6279,11 @@ a.text-dark:hover, a.text-dark:focus {
    .fs60 {
 	font-size: 60px;
   }
+  
+/* @end */
+
+/* @group ESTILOS CSSOMOLDS */
+
+
+
 /* @end */
