--- a/css/clientes/bootstrapDisensa.css
+++ b/css/clientes/bootstrapDisensa.css
@@ -26,7 +26,8 @@
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: Montserrat;
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+  --font-family-monospace: Montserrat 
+  }
 
 *,
 *::before,
@@ -49,7 +50,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin:0;
-  font-family:'Hanalei Fill', cursive;
+  font-family: Montserrat;
   font-size:1rem;
   font-weight:400;
   line-height:1.5;
