--- a/css/cssOmolds.css
+++ b/css/cssOmolds.css
@@ -218,7 +218,7 @@ body {
   margin:0;
   font-family:'Barlow Semi Condensed', sans-serif;
   color:#000000;
-  background-color:#FAFAFA;
+  background-color:transparent;
   margin-bottom: 60px;
 }
 
