--- a/css/cssOmoldsMigracion.css
+++ b/css/cssOmoldsMigracion.css
@@ -15,6 +15,13 @@
 	font-size: 60px;
   }
   
+  .display-5 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  line-height: 1.2; 
+  }
+
+  
 /* @end */
 
 
