--- a/css/cssOmoldsMigracion.css
+++ b/css/cssOmoldsMigracion.css
@@ -93,4 +93,105 @@
 
 /* @end */
 
+/* @group INPUT RANGE */
+
+input[type=range] {
+  -webkit-appearance:none;
+  width:100%;
+  background:transparent;
+  margin:13.8px 0;
+}
+
+input[type=range]:focus {
+  outline:none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width:100%;
+  height:12px;
+  cursor:pointer;
+  background:#ffffff;
+  border-radius:1.3px;
+  border:0.2px solid #cacaca;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  border:1px solid #cacaca;
+  height:36px;
+  width:16px;
+  border-radius:3px;
+  background:#ffffff;
+  cursor:pointer;
+  -webkit-appearance:none;
+  margin-top:-14px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background:#cacaca;
+}
+
+input[type=range]::-moz-range-track {
+  width:100%;
+  height:8.4px;
+  cursor:pointer;
+  background:#ffffff;
+  border-radius:1.3px;
+  border:0.2px solid #cacaca;
+}
+
+input[type=range]::-moz-range-thumb {
+  border:1px solid #cacaca;
+  height:36px;
+  width:16px;
+  border-radius:3px;
+  background:#ffffff;
+  cursor:pointer;
+}
+
+input[type=range]::-ms-track {
+  width:100%;
+  height:8.4px;
+  cursor:pointer;
+  background:transparent;
+  border-color:transparent;
+  color:transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+  background:#ffffff;
+  border:0.2px solid #cacaca;
+  border-radius:2.6px;
+}
+
+input[type=range]::-ms-fill-upper {
+  background:#ffffff;
+  border:0.2px solid #cacaca;
+  border-radius:2.6px;
+}
+
+input[type=range]::-ms-thumb {
+  border:1px solid #cacaca;
+  height:36px;
+  width:16px;
+  border-radius:3px;
+  background:#ffffff;
+  cursor:pointer;
+  height:8.4px;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background:#ffffff;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+  background:#ffffff;
+}
+
+input[type=date], input[type=datetime-local], input[type=month], input[type=time] {
+  height:30px;
+}
+
+/* @end */
+
+
 
