--- a/css/clientes/bootstrapPlenum.css
+++ b/css/clientes/bootstrapPlenum.css
@@ -4270,7 +4270,7 @@ button.bg-warning:focus {
   background-color: #d39e00 !important; }
 
 .bg-danger {
-  background-color: #dc3545 !important; }
+  background-color: #00f700; }
 
 a.bg-danger:hover, a.bg-danger:focus,
 button.bg-danger:hover,
