--- a/css/cssOmoldsMigracion.css
+++ b/css/cssOmoldsMigracion.css
@@ -217,4 +217,35 @@ input[type=date], input[type=datetime-local], input[type=month], input[type=time
 
 
 
+/* @group BOTON CIRCULARES*/
+
+.btn-circle.btn-xl {
+  width: 80px;
+  height: 80px;
+  padding: 10px 16px;
+  border-radius: 40px;
+  font-size: 30px;
+  line-height: 1.33;
+}
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
+}
+
+/* @end */
+
+
+
+
+
+
+
+
+
 
